--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
+body{
+  background-color: black;
+}
 .mainDiv{
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
-  
+
+.buttn{
+  color: greenyellow;
+  border: 1px solid lightgrey;
+  background-color: black;
+}
+
+#size-menu{
+  background-color: black !important;
+  border: 1px solid lightgray;
+  color: greenyellow
+}
+
+.dropdwn-styling{
+  max-width: 50px;
+}
 .box {
   display: inline-block;       
-  border: 1px solid black;
+  border: 1px solid lightgrey;
   width: 15px;
   height: 15px;
   margin-left: -1px;
@@ -15,15 +34,15 @@
   }
 
 .off {
-  background-color: lightgray;
+  background-color: black;
 }
 
 .on {
-  background-color: green;
+  background-color: rgb(82, 184, 82);
 }
   
 .box:hover { 
-  background: #00CCFF;
+  background: rgb(213, 248, 179);
 }
 
 .center {
@@ -41,6 +60,7 @@
 }
   
 h1, h2, h3, h4 {
+  color: rgb(210, 199, 255);
   margin: auto;
   text-align: center;
   width: 50%;
@@ -49,4 +69,11 @@ h1, h2, h3, h4 {
 
 h4 {
   margin-top: 0px;
+}
+
+.info{
+  border-top: 1px solid lightcyan;
+  color: lightcyan;
+  margin-top: 10%;
+  max-width: 500px;
 }
